# ill_mirror-takin2-mag-core

./: .gitignore  AUTHORS  CITATION.bib  CMakeLists.txt  LICENSE  LICENSES  README.md  env.sh  libs  setup_ext.sh
doc/formulas/: formulas.bib  formulas.tex
doc/lecture/: lecture.bib  lecture.tex
ext/: .dir
libs/: algos.h  file.h  fit.h  helper.h  instr.h  jl.cpp  jl.h  loadinstr.h  log.cpp  log.h  mat.h  math.h  phys.h  str.h  string.h  tl2.jl  tl2jl.dylib  traits.h  units.h
libs/_cxx20/: glplot.cpp  glplot.h  magsg.h  math_algos.h
plugins/: .dir  qtas.py
setup/: setup_externals.sh
setup_lin/: buildenv_focal.sh
setup_mac/: InfoCif2Xml.plist  InfoFindSG.plist  InfoMagStructFact.plist  InfoPol.plist  InfoStructFact.plist
setup_mingw/: install_mingw.sh
tools/: .dir
tools/browser/: CMakeLists.txt  browser.cpp
tools/bz/: CMakeLists.txt  bz.cpp  bz.h  bz_calc.cpp  bz_file.cpp  bz_main.cpp  bz_ops.cpp  bz_plot.cpp  bz_test.py  bzlib.h  bzlib.i  globals.cpp  globals.h  plot_cut.cpp  plot_cut.h
tools/cif2xml/: CMakeLists.txt  cif2xml.cpp  findsg.cpp
tools/cli/: ast.cpp  clilexer.l  cliparser.cpp  cliparser.h  cliparser.y  cliparser_types.h  funcs.cpp  funcs.h  sym.cpp  testbuild.sh
tools/glplot/: glplot.cpp  glplot.h
tools/in20/: command.cpp  command.h  data.cpp  data.h  filebrowser.cpp  filebrowser.h  globals.cpp  globals.h  main.cpp  mainwnd.cpp  mainwnd.h  plot.cpp  plot.h  workspace.cpp  workspace.h
tools/magdyn/: CMakeLists.txt  defs.h  graph.h  magdyn.cpp  magdyn.h  magdyn_disp.cpp  magdyn_file.cpp  magdyn_gui.cpp  magdyn_gui.h  magdyn_plot.cpp  magdyn_sites.cpp  magdyn_struct.cpp  magdyn_structplot.cpp  main.cpp  plot_dyn.gpl  table_import.cpp  table_import.h
tools/magdyn/test/: antiferromagnetic_chain.xml  ferromagnetic_chain.xml
tools/magsgbrowser/: CMakeLists.txt  browser.cpp  browser.h  browser.ui  main.cpp
tools/magstructfact/: CMakeLists.txt  magstructfact.cpp  magstructfact.h  magstructfact_file.cpp  magstructfact_nuclei.cpp  magstructfact_plot.cpp
tools/main/: CMakeLists.txt  data.cpp  data.h  filebrowser.cpp  filebrowser.h  main.cpp  mainwnd.cpp  mainwnd.h  plot.cpp  plot.h  workspace.h
tools/misc/: tascalc.py
tools/moldyn/: CMakeLists.txt  moldyn-loader.h  moldyn.cpp  moldyn.h
tools/pol/: CMakeLists.txt  pol.cpp  pol_cli.cpp
tools/report/: report.py  search_gh.sh
tools/runplugin/: runplugin.cpp
tools/scanbrowser/: CMakeLists.txt  command.cpp  data.cpp  data.h  filebrowser.cpp  main.cpp  mainwnd.cpp  mainwnd.h  plot.cpp  plot.h  workspace.cpp  workspace.h
tools/scanbrowser/cli/: ast.cpp  clilexer.l  cliparser.cpp  cliparser.h  cliparser.y  funcs.cpp  sym.cpp
tools/setup/: CMakeLists.txt  convmag.cpp
tools/structfact/: CMakeLists.txt  cif2xml.cpp  loadcif.h  numerictablewidgetitem.h  structfact.cpp  structfact.h  structfact_file.cpp  structfact_findsg.cpp  structfact_nuclei.cpp  structfact_plot.cpp  structurefactor.cpp
tools/tascalc/: Calc.java  TasCalc.java  TestTasCalc.java  cov.py  qtas.py  tas.py  tascalc.java  tascalc.py  tst.py
tools/test/: cif.cpp  cov.py  cryst.cpp  la.cpp  leastsq.cpp  magsg.cpp  mat1.cpp
tools/test/jl/: fit.jl  tl2.jl  tl2jl.dylib
